Bug 669105 - Leak-until-shutdown with deviceorientation and unload listeners. r=smaug